update example key

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,11 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+PORT=5000
+DATABASE_URL="postgresql://postgres:@localhost:5432/postgres"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+JWT_SECRET= 'somesecretkey'
 
-PORT=
-DATABASE_URL=
+CLOUDINARY_CLOUD_NAME= ''
+CLOUDINARY_API_KEY= ''
+CLOUDINARY_API_SECRET= ''
 
-JWT_SECRET= 
-
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-
-FONNTE_API_KEY=
+FONNTE_API_KEY= ''
 
