--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "prisma generate && prisma migrate deploy && prisma db seed",
-    "postinstall": "prisma generate && prisma migrate deploy && prisma db seed"
+    "build": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -29,10 +29,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-cache": "^5.1.2",
-    "prisma": "^5.17.0"
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "prisma": "^5.16.2",
     "prisma-dbml-generator": "^0.12.0"
   }
 }
