--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.1.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -29,7 +30,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "prisma": "^5.16.2",
